@@ -1,101 +1,115 @@
 package com.sprint.mission.discodeit.repository.file;
 
-import com.sprint.mission.discodeit.common.FileUtils;
 import com.sprint.mission.discodeit.entity.Message;
 import com.sprint.mission.discodeit.repository.MessageRepository;
-import java.io.IOException;
+import org.springframework.beans.factory.annotation.Value;
+import org.springframework.boot.autoconfigure.condition.ConditionalOnProperty;
+import org.springframework.stereotype.Repository;
+
+import java.io.*;
 import java.nio.file.Files;
 import java.nio.file.Path;
+import java.nio.file.Paths;
 import java.util.List;
 import java.util.Optional;
 import java.util.UUID;
+import java.util.stream.Stream;
 
-//@Repository("fileMessageRepository")
+@ConditionalOnProperty(name = "discodeit.repository.type", havingValue = "file")
+@Repository
 public class FileMessageRepository implements MessageRepository {
     private final Path DIRECTORY;
     private final String EXTENSION = ".ser";
 
-    public FileMessageRepository() {
-        this.DIRECTORY = Path.of(System.getProperty("user.dir"), "my_dir", "Messages");
-        FileUtils.init(DIRECTORY);
+    public FileMessageRepository(
+            @Value("${discodeit.repository.file-directory:data}") String fileDirectory
+    ) {
+        this.DIRECTORY = Paths.get(System.getProperty("user.dir"), fileDirectory, Message.class.getSimpleName());
+        if (Files.notExists(DIRECTORY)) {
+            try {
+                Files.createDirectories(DIRECTORY);
+            } catch (IOException e) {
+                throw new RuntimeException(e);
+            }
+        }
     }
 
-    private Path makePath(UUID id) {
-        return DIRECTORY.resolve(id.toString() + EXTENSION);
+    private Path resolvePath(UUID id) {
+        return DIRECTORY.resolve(id + EXTENSION);
     }
-
 
     @Override
     public Message save(Message message) {
-        Path path = makePath(message.getId());
-        boolean result = FileUtils.saveObject(path, message);
-        if (!result) {
-            throw new IllegalStateException("저장에 실패했습니다.");
+        Path path = resolvePath(message.getId());
+        try (
+                FileOutputStream fos = new FileOutputStream(path.toFile());
+                ObjectOutputStream oos = new ObjectOutputStream(fos)
+        ) {
+            oos.writeObject(message);
+        } catch (IOException e) {
+            throw new RuntimeException(e);
         }
         return message;
     }
 
     @Override
     public Optional<Message> findById(UUID id) {
-        return Optional.ofNullable((Message) FileUtils.loadObject(makePath(id)));
-    }
-
-    @Override
-    public Optional<Message> findLatestByChannelId(UUID channelId) {
-        List<Message> messages = findAll();
-        Message latestMessage = null;
-
-        for (Message message : messages) {
-            if (!message.getChannelId().equals(channelId)) {
-                continue;
-            }
-
-            if (latestMessage == null || message.getCreatedAt().isAfter(latestMessage.getCreatedAt())) {
-                latestMessage = message;
+        Message messageNullable = null;
+        Path path = resolvePath(id);
+        if (Files.exists(path)) {
+            try (
+                    FileInputStream fis = new FileInputStream(path.toFile());
+                    ObjectInputStream ois = new ObjectInputStream(fis)
+            ) {
+                messageNullable = (Message) ois.readObject();
+            } catch (IOException | ClassNotFoundException e) {
+                throw new RuntimeException(e);
             }
         }
-
-        return Optional.ofNullable(latestMessage);
+        return Optional.ofNullable(messageNullable);
     }
 
     @Override
-    public List<Message> findAll() {
-        return FileUtils.load(DIRECTORY);
+    public List<Message> findAllByChannelId(UUID channelId) {
+        try (Stream<Path> paths = Files.list(DIRECTORY)) {
+            return paths
+                    .filter(path -> path.toString().endsWith(EXTENSION))
+                    .map(path -> {
+                        try (
+                                FileInputStream fis = new FileInputStream(path.toFile());
+                                ObjectInputStream ois = new ObjectInputStream(fis)
+                        ) {
+                            return (Message) ois.readObject();
+                        } catch (IOException | ClassNotFoundException e) {
+                            throw new RuntimeException(e);
+                        }
+                    })
+                    .filter(message -> message.getChannelId().equals(channelId))
+                    .toList();
+        } catch (IOException e) {
+            throw new RuntimeException(e);
+        }
     }
 
     @Override
     public boolean existsById(UUID id) {
-        Path path = makePath(id);
+        Path path = resolvePath(id);
         return Files.exists(path);
     }
 
     @Override
     public void deleteById(UUID id) {
-        Path path = makePath(id);
-        if (!Files.exists(path)) {
-            throw new RuntimeException("삭제 실패: 해당 " + id + "의 파일을 찾을 수 없습니다.");
-        }
+        Path path = resolvePath(id);
         try {
             Files.delete(path);
         } catch (IOException e) {
-            throw new RuntimeException("파일을 삭제할 수 없습니다.");
+            throw new RuntimeException(e);
         }
     }
 
     @Override
     public void deleteAllByChannelId(UUID channelId) {
-        List<Message> messages = findAll();
-        for (Message message : messages) {
-            if (!message.getChannelId().equals(channelId)) {
-                continue;
-            }
-            Path path = makePath(message.getId());
-            try {
-                Files.deleteIfExists(path);
-            } catch (IOException e) {
-                throw new RuntimeException("파일을 삭제할 수 없습니다. messageId: " + message.getId());
-            }
-        }
-
+        this.findAllByChannelId(channelId)
+                .forEach(message -> this.deleteById(message.getId()));
     }
 }
