@@ -1,107 +1,121 @@
 package com.sprint.mission.discodeit.repository.file;
 
-import com.sprint.mission.discodeit.common.FileUtils;
 import com.sprint.mission.discodeit.entity.UserStatus;
 import com.sprint.mission.discodeit.repository.UserStatusRepository;
+import org.springframework.beans.factory.annotation.Value;
 import org.springframework.boot.autoconfigure.condition.ConditionalOnProperty;
 import org.springframework.stereotype.Repository;
 
-import java.io.IOException;
+import java.io.*;
 import java.nio.file.Files;
 import java.nio.file.Path;
+import java.nio.file.Paths;
 import java.util.List;
 import java.util.Optional;
 import java.util.UUID;
+import java.util.stream.Stream;
 
-//@Repository("fileUserStatusRepository")
+@ConditionalOnProperty(name = "discodeit.repository.type", havingValue = "file")
+@Repository
 public class FileUserStatusRepository implements UserStatusRepository {
     private final Path DIRECTORY;
     private final String EXTENSION = ".ser";
 
-    public FileUserStatusRepository() {
-        this.DIRECTORY = Path.of(System.getProperty("user.dir"), "my_dir", "userStatuses");
-        FileUtils.init(DIRECTORY);
+    public FileUserStatusRepository(
+            @Value("${discodeit.repository.file-directory:data}") String fileDirectory
+    ) {
+        this.DIRECTORY = Paths.get(System.getProperty("user.dir"), fileDirectory, UserStatus.class.getSimpleName());
+        if (Files.notExists(DIRECTORY)) {
+            try {
+                Files.createDirectories(DIRECTORY);
+            } catch (IOException e) {
+                throw new RuntimeException(e);
+            }
+        }
     }
 
-    private Path makePath(UUID id) {
-        return DIRECTORY.resolve(id.toString() + EXTENSION);
+    private Path resolvePath(UUID id) {
+        return DIRECTORY.resolve(id + EXTENSION);
     }
-
 
     @Override
     public UserStatus save(UserStatus userStatus) {
-        Path path = makePath(userStatus.getId());
-        boolean result = FileUtils.saveObject(path, userStatus);
-        if (!result) {
-            throw new IllegalArgumentException("UserStatus 저장 실패");
+        Path path = resolvePath(userStatus.getId());
+        try (
+                FileOutputStream fos = new FileOutputStream(path.toFile());
+                ObjectOutputStream oos = new ObjectOutputStream(fos)
+        ) {
+            oos.writeObject(userStatus);
+        } catch (IOException e) {
+            throw new RuntimeException(e);
         }
         return userStatus;
     }
 
     @Override
     public Optional<UserStatus> findById(UUID id) {
-        return Optional.ofNullable((UserStatus) FileUtils.loadObject(makePath(id)));
+        UserStatus userStatusNullable = null;
+        Path path = resolvePath(id);
+        if (Files.exists(path)) {
+            try (
+                    FileInputStream fis = new FileInputStream(path.toFile());
+                    ObjectInputStream ois = new ObjectInputStream(fis)
+            ) {
+                userStatusNullable = (UserStatus) ois.readObject();
+            } catch (IOException | ClassNotFoundException e) {
+                throw new RuntimeException(e);
+            }
+        }
+        return Optional.ofNullable(userStatusNullable);
     }
 
     @Override
     public Optional<UserStatus> findByUserId(UUID userId) {
-        List<UserStatus> userStatusList = findAll();
-        for (UserStatus userStatus : userStatusList) {
-            if (userStatus.getUserId().equals(userId)) {
-                return Optional.of(userStatus);
-            }
-        }
-        return Optional.empty();
+        return findAll().stream()
+                .filter(userStatus -> userStatus.getUserId().equals(userId))
+                .findFirst();
     }
 
     @Override
     public List<UserStatus> findAll() {
-        return FileUtils.load(DIRECTORY);
+        try (Stream<Path> paths = Files.list(DIRECTORY)) {
+            return paths
+                    .filter(path -> path.toString().endsWith(EXTENSION))
+                    .map(path -> {
+                        try (
+                                FileInputStream fis = new FileInputStream(path.toFile());
+                                ObjectInputStream ois = new ObjectInputStream(fis)
+                        ) {
+                            return (UserStatus) ois.readObject();
+                        } catch (IOException | ClassNotFoundException e) {
+                            throw new RuntimeException(e);
+                        }
+                    })
+                    .toList();
+        } catch (IOException e) {
+            throw new RuntimeException(e);
+        }
     }
 
     @Override
     public boolean existsById(UUID id) {
-        Path path = makePath(id);
+        Path path = resolvePath(id);
         return Files.exists(path);
     }
 
     @Override
-    public boolean existsByUserId(UUID userId) {
-        List<UserStatus> userStatusList = findAll();
-        for (UserStatus userStatus : userStatusList) {
-            if (userStatus.getUserId().equals(userId)) {
-                return true;
-            }
-        }
-        return false;
-    }
-
-    @Override
     public void deleteById(UUID id) {
-        Path path = makePath(id);
-        if (!Files.exists(path)) {
-            throw new RuntimeException("삭제 실패: 해당 " + id + "의 파일을 찾을 수 없습니다.");
-        }
+        Path path = resolvePath(id);
         try {
             Files.delete(path);
         } catch (IOException e) {
-            throw new RuntimeException("파일을 삭제할 수 없습니다.");
+            throw new RuntimeException(e);
         }
     }
 
     @Override
     public void deleteByUserId(UUID userId) {
-        List<UserStatus> userStatusList = findAll();
-        for (UserStatus userStatus : userStatusList) {
-            if (!userStatus.getUserId().equals(userId)) {
-                continue;
-            }
-            Path path = makePath(userStatus.getId());
-            try {
-                Files.deleteIfExists(path);
-            } catch (IOException e) {
-                throw new RuntimeException("파일을 삭제할 수 없습니다. userStatusId: " + userStatus.getId());
-            }
-        }
+        this.findByUserId(userId)
+                .ifPresent(userStatus -> this.deleteById(userStatus.getId()));
     }
 }
